--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,12 +1,58 @@
+.light {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    margin: 5px;
+}
 
-/* 
+.yellow {
+    background-color: yellow;
+}
 
-    You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
-    other sylesheets into your bunde as well, e.j:
-    
-    import 'relative/path/to/stylesheet.scss';
+.red {
+    background-color: red;
+}
 
-*/
+.green {
+    background-color: green;
+}
+
+.bright {
+    box-shadow: 9px 10px 34px 0px rgba(238, 221, 144, 0.75);
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+    background-color: white; 
+  }
+  
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  
+  .line {
+    background-color: black;
+    width: 30px; 
+    height: 340px; 
+    position: absolute;
+    top: 0;
+  }
+  
+  .color-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: black; 
+    padding: 30px;
+    border: 5px solid #333; 
+    border-radius: 10px; 
+    margin-top: 80px; 
+  }
